<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/login_background"
    tools:context="com.example.leetdigital.tasks.LoginActivity">

    <!-- Login progress -->
    <TextView
        android:text="@string/welcome_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:id="@+id/textView"
        android:textSize="27sp" />

    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ImageView
        android:layout_width="147dp"
        android:layout_height="147dp"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/avatar"
        android:id="@+id/imageView" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView android:id="@+id/email" android:layout_width="272dp"
                    android:layout_height="wrap_content" android:hint="@string/username_hint"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:drawablePadding="10dp"
                    android:singleLine="true"
                    android:layout_gravity="center"
                    android:textColorHighlight="@android:color/background_light"
                    android:textIsSelectable="false"
                    android:textColorHint="#fff"
                    android:textColor="#fff"
                    android:textSize="17sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/password" android:layout_width="268dp"
                    android:layout_height="wrap_content" android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login" android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:drawableLeft="@drawable/ic_lock_black_24dp"
                    android:drawablePadding="10dp"
                    android:layout_gravity="center"
                    android:maxLines="1" android:singleLine="true"
                    android:textSize="17sp"
                    android:theme="@style/EditTextTheme"
                    />

            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/email_sign_in_button" style="@android:style/TextAppearance.Material.Small"
                android:layout_width="274dp" android:layout_height="62dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="#00D386" android:textColor="#fff"
                android:layout_marginTop="16dp" android:text="@string/login_text"
                android:textStyle="bold"
                android:elevation="0dp"
                android:layout_weight="2.94"
                android:textSize="17sp" />

            <TextView
                android:text="@string/create_new_account"
                android:paddingTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:gravity="center"
                android:id="@+id/textView1" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>


